cli/tests/snapshots/arguments__filesystem_mkswapfile_with_size.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"filesystem\", \"mkswapfile\", \"-s\", \"4G\", \"/mnt/swap\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Filesystem(
        FilesystemCommand {
            subcommand: Mkswapfile(
                FilesystemMkswapfileCommand {
                    size: "4G",
                    uuid: None,
                    path: "/mnt/swap",
                },
            ),
        },
    ),
}
