cli/tests/snapshots/arguments__filesystem_resize.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"filesystem\", \"resize\", \"+1G\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Filesystem(
        FilesystemCommand {
            subcommand: Resize(
                FilesystemResizeCommand {
                    enqueue: false,
                    offline: false,
                    size: "+1G",
                    path: "/mnt",
                },
            ),
        },
    ),
}
