cli/tests/snapshots/arguments__filesystem_resize_missing_path.snap
---
source: cli/tests/arguments.rs
expression: "parse_err(&[\"btrfs\", \"filesystem\", \"resize\", \"+1G\"])"
---
error: the following required arguments were not provided:
  <PATH>
