cli/tests/snapshots/arguments__filesystem_show.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"filesystem\", \"show\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Filesystem(
        FilesystemCommand {
            subcommand: Show(
                FilesystemShowCommand {
                    all_devices: false,
                    mounted: false,
                    units: UnitMode {
                        raw: false,
                        human_readable: false,
                        iec: false,
                        si: false,
                        kbytes: false,
                        mbytes: false,
                        gbytes: false,
                        tbytes: false,
                    },
                    filter: Some(
                        "/mnt",
                    ),
                },
            ),
        },
    ),
}
