cli/tests/snapshots/arguments__filesystem_show_no_args.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"filesystem\", \"show\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Filesystem(
        FilesystemCommand {
            subcommand: Show(
                FilesystemShowCommand {
                    all_devices: false,
                    mounted: false,
                    units: UnitMode {
                        raw: false,
                        human_readable: false,
                        iec: false,
                        si: false,
                        kbytes: false,
                        mbytes: false,
                        gbytes: false,
                        tbytes: false,
                    },
                    filter: None,
                },
            ),
        },
    ),
}
