cli/tests/snapshots/arguments__filesystem_sync.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"filesystem\", \"sync\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Filesystem(
        FilesystemCommand {
            subcommand: Sync(
                FilesystemSyncCommand {
                    path: "/mnt",
                },
            ),
        },
    ),
}
