cli/tests/snapshots/arguments__filesystem_usage.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"filesystem\", \"usage\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Filesystem(
        FilesystemCommand {
            subcommand: Usage(
                FilesystemUsageCommand {
                    units: UnitMode {
                        raw: false,
                        human_readable: false,
                        iec: false,
                        si: false,
                        kbytes: false,
                        mbytes: false,
                        gbytes: false,
                        tbytes: false,
                    },
                    human_si: false,
                    tabular: false,
                    paths: [
                        "/mnt",
                    ],
                },
            ),
        },
    ),
}
