cli/tests/snapshots/arguments__global_verbose.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"-v\", \"filesystem\", \"df\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 1,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Filesystem(
        FilesystemCommand {
            subcommand: Df(
                FilesystemDfCommand {
                    units: UnitMode {
                        raw: false,
                        human_readable: false,
                        iec: false,
                        si: false,
                        kbytes: false,
                        mbytes: false,
                        gbytes: false,
                        tbytes: false,
                    },
                    path: "/mnt",
                },
            ),
        },
    ),
}
