cli/tests/snapshots/arguments__inspect_dump_super.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"inspect-internal\", \"dump-super\", \"/dev/sda1\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Inspect(
        InspectCommand {
            subcommand: DumpSuper(
                DumpSuperCommand {
                    path: "/dev/sda1",
                    full: false,
                    all: false,
                    mirror: None,
                    force: false,
                },
            ),
        },
    ),
}
